--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
   },
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-markdown": "^8.0.3",
+    "react-scrollbars-custom": "^4.0.27",
+    "simplebar-react": "^2.4.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.3",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
   }
